# Notion2API

./: .gitignore  Dockerfile  README.md  config.example.json  docker-compose.yml
.github/: pull.yml
.github/workflows/: docker-image.yml
cmd/notion2api/: main.go
frontend/: package.json
frontend/app/: globals.css  layout.tsx
frontend/components/admin/: accounts-panel.tsx  admin-console.tsx  admin-sidebar.tsx  conversations-panel.tsx  dashboard-panel.tsx  login-overlay.tsx  models-panel.tsx  settings-panel.tsx  shared.tsx  tester-panel.tsx
frontend/components/layout/: theme-provider.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  scroll-area.tsx  select.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx
internal/app/: account_discovery.go  account_pool.go  admin.go  admin_accounts.go  browser_helper_process_unix.go  browser_helper_process_windows.go  config.go  conversations.go  login_helper.go  main.go  main_fresh_thread_test.go  metrics.go  notion_client.go  notion_client_best_effort_test.go  notion_client_browser_fallback_test.go  notion_client_browser_transport.go  notion_client_browser_transport_test.go  notion_client_login_transport.go  notion_client_protocol_test.go  notion_client_wreq_transport.go  proxy_policy.go  proxy_resolver.go  request_dispatch.go  session_refresh.go
internal/wreq/: doc.go  wreq_cgo.go  wreq_ffi_compat.h  wreq_streaming_stub_test.go  wreq_streaming_test.go  wreq_stub.go
wreq-ffi/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
wreq-ffi/src/: lib.rs
(+3 files in other folders)
