[package]
name = "wreq-ffi"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "C ABI shim around the wreq Rust HTTP client for embedding into Go (notion2api v2)"

[lib]
name = "wreq_ffi"
crate-type = ["staticlib", "rlib"]

[dependencies]
wreq = "5.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
